TASK#003 DESC#关于页面上的一些调整以及部分内容录入

--- a/src/assets/mdfiles/粒子时钟实现.md
+++ b/src/assets/mdfiles/粒子时钟实现.md
@@ -35,7 +35,7 @@
 </template>
 
 <script setup>
-import { ref, onMounted, defineProps } from 'vue';
+import { ref, onMounted } from 'vue';
 
 const canvasRef = ref(null);
 const ctx = ref(null);
