--- a/src/assets/mdfiles/前端经典问题.md
+++ b/src/assets/mdfiles/前端经典问题.md
@@ -29,4 +29,38 @@
   };
   ```
 
-  
+
+## 2、使用JavaScript实现LRU缓存算法
+
+* 概念：LRU，即Least Recently Used，即最久未使用。LRU缓存算法即为淘汰策略为优先淘汰缓存中最久未使用的数据。
+
+```java
+class LRUCache {
+  #cache;
+  constructor(capacity) {
+    this.capacity = capacity;
+    this.#cache = new Map();
+  }
+  has(kay){
+    return this.#cache.has(kay);
+  }
+  get(kay){
+    if (!this.#cache.has(kay)) {
+      return;
+    }
+    const value = this.#cache.get(kay);
+    this.#cache.delete(kay);
+    this.#cache.set(kay, value);
+    return value;
+  }
+  put(kay, value){
+    if (!this.#cache.has(kay)) {
+      this.#cache.delete(kay);
+    } else if (this.#cache.size() >= this.capacity) {
+      this.#cache.delete(this.#cache.keys().next().value);
+    }
+    this.#cache.set(kay, value);
+  }
+}
+```
+
