TASK#004 DESC#解决卡片路由无法跳转得问题，确定页面二级子路由的显示方式和部分页面涉及

--- a/src/views/Mine/FrontExperience/前端经典问题.md
+++ b/src/views/Mine/FrontExperience/前端经典问题.md
@@ -34,7 +34,7 @@
 
 * 概念：LRU，即Least Recently Used，即最久未使用。LRU缓存算法即为淘汰策略为优先淘汰缓存中最久未使用的数据。
 
-```java
+```javascript
 class LRUCache {
   #cache;
   constructor(capacity) {
