--- a/src/views/Note/FrontExperience/前端经典问题.md
+++ b/src/views/Note/FrontExperience/前端经典问题.md
@@ -1,4 +1,4 @@
-# 前端经典问题题解
+``# 前端经典问题题解
 
 ## 作用
 
@@ -155,5 +155,74 @@ function uniquePaths(m, n) {
 function request(url, maxCount = 5) {
   return fetch(url).catch(error => maxCount <= 0 ? Promise.reject(error) : request(url, maxCount - 1));
 }
+```
+
+## 5、惰性函数
+
+案例：复制文本函数
+
+函数中第一步，判断是否支持navigator的API，实际上只需要运行一次，所以可以使用惰性函数的思想来优化函数。
+
+```javascript
+function copyText(text) {
+  if (navigator.clipboard) {
+    navigator.clipboard.writeText(text);
+  } else {
+    const input = document.createElement('input');
+    input.setAttribute('value', text);
+    document.body.appendChild(input);
+    input.select();
+    document.execCommand('copy');
+    document.body.removeChild(input);
+  }
+}
+```
+
+使用惰性函数优化后：
+
+```javascript
+function copyText(text) {
+  if (navigator.clipboard) {
+    copyText = (text) => navigator.clipboard.writeText(text);
+  } else {
+    copyText = (text) => {
+      const input = document.createElement('input');
+      input.setAttribute('value', text);
+      document.body.appendChild(input);
+      input.select();
+      document.execCommand('copy');
+      document.body.removeChild(input);
+    };
+  }
+  copyText(text);
+}
+```
+用处：用于优化一些运行比较消耗资源的条件判断，例如查询需要有变更必定会刷新页面的后端之类的。
+
+## 6、initial、unset、revert
+
+这是css的通用属性值，适用于所有的css属性。
+
+* `initial`：属性的默认值，大大减少了记忆负担，因为无法保证记住每一个属性的默认值。
+* `unset`：声明该属性没有设值（能继承就继承，不能继承就使用默认属性值）。
+* `revert`：可以让属性值回归到浏览器的默认样式（注意与不设值区分，浏览器的默认样式不是不设值）。
+
+## 7、ES、Runtime、JS和WebAPI
+
+* ES：EcmaScript，本质上是一篇[文档](https://tc39.es/ecma262/)，其中详细规定了一些语言的规范，即ES规范，主要包含三大块，语法、概念、标准库（Array、Math、Number、Promise等）；
+* Runtime：代码的运行环境，例如浏览器将ES中规定的每一个规范都一一实现，则说明浏览器内核支持ES语言，前端支持ES语言的Runtime一般包括浏览器、node、小程序；
+* WebAPI：上述的浏览器、node、小程序等环境之间虽然都是基于ES实现，但是相互之间还是有一些差异的，每个环境有一些自己独有的东西，例如浏览器中有DOM、bom、settimeout、console，node中有process（进程对象），node中的settimeout和console是node为了保持与浏览器开发的基本一致弄出来的一些相同API（settimeout在浏览器中返回的是数字，node中返回的是对象），这些环境中唯一必须相同的部分只有ES，其他的或多或少都有一些差异，这些每个环境独有的部分（或者说差异）就叫做环境API，**而在浏览器中独有的这部分差异就叫做[WebAPI](https://developer.mozilla.org/zh-CN/docs/Web/API)**；
+* JS，广义的JS就是ES，因为JS就是ES演变而来，一般来说的JS是指`ES + WebAPI`（Nodejs指`ES + NodeAPI`）。
+
+## 8、正则前瞻运算符
+
+将数字字符串`const str = '1000000000'`转换为`1,000,000,000`这样的格式。
+
+```javascript
+const str = '1000000000';
+// 1,000,000,000
+// 可以使用正则匹配前瞻运算符，前瞻运算符可以只匹配位置，然后向前验证前面的内容是否符合正则，前瞻运算符用 ?=[正则] 这样的格式
+const s = str.replace(/\B(?=(\d{3})+$)/g, ','); // 加 \B 是为了排除边界那种情况，避免在整个字符串前面添加逗号
+console.log(s);
 ```
 
